<resources>
    <string name="app_name">Salesman Helper</string>

    <string name="add_folder">Add a new product category</string>

    <string name="search">Search</string>
    <string name="ok">OK</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="create">Create</string>
    <string name="change">Change</string>
    <string name="title">Title</string>
    <string name="price">Price</string>
    <string name="amount">Amount</string>
    <string name="barcode">Barcode (optional)</string>
    <string name="add">Add new product</string>
    <string name="choose">Choose</string>

    <string name="hint_search">Enter the barcode or title of product</string>


    <string name="hint_create_folder_message">Enter the name below</string>
    <string name="hint_create_folder_hint">Enter here the name</string>
    <string name="hint_create_folder_delete_toast">Please fill the row</string>

    <string name="dialog_folder_delete_message">Are you sure that you want to delete this folder?</string>
    <string name="dialog_product_delete_message">Are you sure that you want to delete this product(s)?</string>

    <string name="dialog_create_new_product_from_scanner">Looks like this product still not in your database,
    do you want add this product there ?</string>


    <string name="list_folders_fragment">List folders</string>
    <string name="add_folder_fragment">Add new folder</string>
    <string name="edit_folder_fragment">Edit current folder</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_folder_for_adding_product">Choose folder for saving product</string>

</resources>